Closed Bug 552186 Opened 14 years ago Closed 14 years ago

gfx/thebes/src/gfxPlatform.cpp:599: warning: 'rv' may be used uninitialized in this function

Categories

(Core :: Graphics, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9.3a4

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
gcc 4.4.1 on Linux x86-64 complains:

gfx/thebes/src/gfxPlatform.cpp: In member function 'void gfxPlatform::AppendCJKPrefLangs(eFontPrefLang*, PRUint32&, eFontPrefLang, eFontPrefLang)':
gfx/thebes/src/gfxPlatform.cpp:599: warning: 'rv' may be used uninitialized in this function
Attachment #432330 - Flags: review?(jfkthame)
Comment on attachment 432330 [details] [diff] [review]
fix

Looks correct to me, thanks.
Attachment #432330 - Flags: review?(jfkthame) → review+
http://hg.mozilla.org/mozilla-central/rev/f4c6704e4e8b
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: