Fix gcc warning: 'rv' may be used uninitialized in this function.  b=552186 r=jfkthame